update: home url changed

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
         let qrcode  = new QRCode("qrcode");
 
         home_btn.addEventListener('click', () => {
-            location.href = "{{ url_for('router.index') }}"
+            location.href = "https://szk.kr"
         })
 
         function makeCode() {
